--- a/MathQuiz/MathQuiz/MathQuiz.csproj
+++ b/MathQuiz/MathQuiz/MathQuiz.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0E4403D7-E466-4BD7-809E-06127A422E77}</ProjectGuid>
+    <ProjectGuid>{87A8D103-5E77-4C36-B460-07C420F971E6}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>MathQuiz</RootNamespace>
     <AssemblyName>MathQuiz</AssemblyName>
@@ -54,6 +54,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
